javascript/JavaScript2021/25.10.2021/examples/main3.js
function hello() {
  this.alert("hello world !");
  this.confirm("hello world ?");
  //error
  // this.input();
}
hello();
